force-app/main/default/objects/Landing_Page_Image_Video__c/Landing_Page_Image_Video__c.object-meta.xml
<CustomObject>
    <label>Landing Page Image/Video</label>
    <nameField>
        <label>Landing Page Image/Video Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>