force-app/main/default/objects/Landing_Page_Image_Video__c/fields/Background_Image__c.field-meta.xml
<CustomField>
    <fullName>Background_Image__c</fullName>
    <label>Background Image</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>