force-app/main/default/objects/Landing_Page_Image_Video__c/fields/Embed_Video__c.field-meta.xml
<CustomField>
    <fullName>Embed_Video__c</fullName>
    <label>Embed Video</label>
    <type>Url</type>
</CustomField>