force-app/main/default/objects/Landing_Page_Image_Video__c/fields/Partner_Logo__c.field-meta.xml
<CustomField>
    <fullName>Partner_Logo__c</fullName>
    <label>Partner Logo</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>